Fix for CMS alignment, fixes #108

--- a/_sass/components/_article.scss
+++ b/_sass/components/_article.scss
@@ -2,6 +2,9 @@
 
 article,
 .pat-rich {
+	.cms-center {
+		text-align: center;
+	}
 
 	h1,h2,p,ul,ol,table,dl,pre {
 		margin-bottom: 2rem;
